# dot-selection

./: CMakeLists.txt  README.md
include/: brain.hpp  dot.hpp  macros.hpp  population.hpp
src/: brain.cpp  dot.cpp  main.cpp  population.cpp
